--- a/src/main/webapp/dashboard/legal/search.xhtml
+++ b/src/main/webapp/dashboard/legal/search.xhtml
@@ -1,6 +1,6 @@
 <!--
-Legal Office (LO) 
-Copyright (C) 2022  D P Bennett & Associates Limited
+Legal Office (Lo) 
+Copyright (C) 2023  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -24,79 +24,86 @@ Email: info@dpbennett.com.jm
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
-    <p:panel id="documentSearchPanel" header="Document Search" >
-        <h:panelGrid columns="2" cellspacing="5">
-            <h:outputText value="Search type" />
-            <p:selectOneMenu value="#{legalDocumentManager.searchType}" style="width: 90%;" >
+    <h:panelGrid columns="2" cellspacing="5" >
+        <p:outputLabel value="Search type" />            
+        <p:selectOneMenu value="#{clientManager.searchType}" >
 
-                <p:ajax update="searchText"
-                        global="false"
-                        listener="#{legalDocumentManager.updateSearch}"
-                        process="@this" />
+            <f:selectItems value="#{clientManager.groupedSearchTypes}" />
 
-                <f:selectItems value="#{legalDocumentManager.legalDocumentSearchTypes}" />
+            <p:ajax update="dateField,datePeriod,startSearchDate,endSearchDate" 
+                    listener="#{clientManager.updateSearchType}"
+                    global="false" 
+                    process="@this" />
 
-            </p:selectOneMenu>
+        </p:selectOneMenu>
 
-            <h:outputText value="Date field" />
-            <p:selectOneMenu value="#{legalDocumentManager.dateSearchPeriod.dateField}" style="width: 90%;" >
+        <p:outputLabel value="Date field" />
+        <p:selectOneMenu value="#{clientManager.dateSearchPeriod.dateField}" 
+                         id="dateField" >
+            <p:ajax                        
+                listener="#{clientManager.updateDateSearchField}"
+                global="false"
+                process="@this" />
 
-                <p:ajax update="searchText"
-                        global="false"
-                        listener="#{legalDocumentManager.updateSearch}"
-                        process="@this" />
+            <f:selectItems value="#{clientManager.allDateSearchFields}" />
 
-                <f:selectItems value="#{legalDocumentManager.legalDocumentDateSearchFields}" />
+        </p:selectOneMenu>
 
-            </p:selectOneMenu>
+        <p:outputLabel value="Date period" />               
+        <p:selectOneMenu value= "#{clientManager.dateSearchPeriod.name}" 
+                         id="datePeriod" >
 
-            <h:outputText value="Date period" />
-            <p:selectOneMenu value="#{legalDocumentManager.dateSearchPeriod.name}" style="width: 90%;" >
-                <p:ajax update="legalDocStartSearchDate,legalDocEndSearchDate"
-                        listener="#{legalDocumentManager.updateDatePeriodSearch}"
-                        process="@this" />
-                <f:selectItems value="#{systemManager.datePeriods}" />
-            </p:selectOneMenu >
+            <p:ajax listener="#{clientManager.dateSearchPeriod.initDatePeriod}"
+                    global="false"
+                    update="startSearchDate,endSearchDate"
+                    process="@this" />
 
-            <h:outputText value="Start date"/>
-            <p:calendar id="legalDocStartSearchDate"
-                        value="#{legalDocumentManager.dateSearchPeriod.startDate}"
-                        navigator="true"
-                        disabled="#{legalDocumentManager.dateSearchPeriod.startDateDisabled}"
-                        pattern="MMM dd, yyyy" >
-                <p:ajax event="dateSelect"
-                        listener="#{legalDocumentManager.handleStartSearchDateSelect}" />
-                <p:ajax event="keyup"
-                        listener="#{legalDocumentManager.handleStartSearchDateSelect}" />
-            </p:calendar>
+            <f:selectItems value="#{clientManager.datePeriods}"/>
 
-            <h:outputText value="End date"/>
-            <p:calendar id="legalDocEndSearchDate"
-                        value="#{legalDocumentManager.dateSearchPeriod.endDate}"
-                        navigator="true"
-                        disabled="#{legalDocumentManager.dateSearchPeriod.endDateDisabled}"
-                        pattern="MMM dd, yyyy" >
-                <p:ajax event="dateSelect"
-                        listener="#{legalDocumentManager.handleEndSearchDateSelect}" />
-                <p:ajax event="keyup"
-                        listener="#{legalDocumentManager.handleEndSearchDateSelect}" />
-            </p:calendar>
+        </p:selectOneMenu>
+        <p:outputLabel value="Start" />
+        <p:calendar id="startSearchDate"
+                    value="#{clientManager.dateSearchPeriod.startDate}"                    
+                    size="17"
+                    navigator="true"
+                    validator="requiredFieldValidator"
+                    disabled="#{clientManager.dateSearchPeriod.startDateDisabled}"
+                    pattern="MMM dd, yyyy" />
 
-        </h:panelGrid> 
-        <p:toolbar>
-            <p:toolbarGroup align="right" >
-                <p:inputText value="#{legalDocumentManager.searchText}"  
-                             id="searchText"
-                             style="width: 50%;" />
+        <p:outputLabel value="End" />
+        <p:calendar id="endSearchDate"
+                    value="#{clientManager.dateSearchPeriod.endDate}"
+                    size="17"
+                    navigator="true"
+                    validator="requiredFieldValidator"
+                    disabled="#{clientManager.dateSearchPeriod.endDateDisabled}"
+                    pattern="MMM dd, yyyy" />
 
-                <p:spacer width="5" />
-                <p:commandButton value="Search"
-                                 id="legalDocumentSearchButton"
-                                 actionListener="#{legalDocumentManager.doSearch}"
-                                 icon="pi pi-search"
-                                 process="@form"/>
-            </p:toolbarGroup>
-        </p:toolbar>
-        <p:watermark value="Enter search text" for="searchText" />   
-    </p:panel>
+    </h:panelGrid>   
+
+    <p:inputText value="#{clientManager.searchText}"  
+                 id="searchText" >
+
+        <p:ajax event="keyup"
+                global="false"
+                listener="#{clientManager.updateSearch}"
+                process="@this"/>
+
+        <p:ajax event="mousemove"
+                global="false"
+                listener="#{clientManager.updateSearch}"
+                process="@this"/>
+
+    </p:inputText>                    
+
+    <p:spacer width="5" />
+    <p:commandButton id="defaultCommand"
+                     class="search-button"   
+                     actionListener="#{clientManager.doDefaultCommand}"
+                     update=":appForm:mainTabView"
+                     icon="pi pi-search"
+                     process="@form" />
+
+    <p:watermark value="Enter search text" for="searchText" />
+
 </html>
