--- a/src/main/webapp/dashboard/legal/adminTab.xhtml
+++ b/src/main/webapp/dashboard/legal/adminTab.xhtml
@@ -1,5 +1,5 @@
 <!--
-Client Management (CM) 
+Legal Office (LO) 
 Copyright (C) 2023  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
