--- a/src/main/webapp/dashboard/legal/search.xhtml
+++ b/src/main/webapp/dashboard/legal/search.xhtml
@@ -26,72 +26,72 @@ Email: info@dpbennett.com.jm
 
     <h:panelGrid columns="2" cellspacing="5" >
         <p:outputLabel value="Search type" />            
-        <p:selectOneMenu value="#{clientManager.searchType}" >
+        <p:selectOneMenu value="#{legalDocumentManager.searchType}" >
 
-            <f:selectItems value="#{clientManager.groupedSearchTypes}" />
+            <f:selectItems value="#{legalDocumentManager.groupedSearchTypes}" />
 
             <p:ajax update="dateField,datePeriod,startSearchDate,endSearchDate" 
-                    listener="#{clientManager.updateSearchType}"
+                    listener="#{legalDocumentManager.updateSearchType}"
                     global="false" 
                     process="@this" />
 
         </p:selectOneMenu>
 
         <p:outputLabel value="Date field" />
-        <p:selectOneMenu value="#{clientManager.dateSearchPeriod.dateField}" 
+        <p:selectOneMenu value="#{legalDocumentManager.dateSearchPeriod.dateField}" 
                          id="dateField" >
             <p:ajax                        
-                listener="#{clientManager.updateDateSearchField}"
+                listener="#{legalDocumentManager.updateDateSearchField}"
                 global="false"
                 process="@this" />
 
-            <f:selectItems value="#{clientManager.allDateSearchFields}" />
+            <f:selectItems value="#{legalDocumentManager.allDateSearchFields}" />
 
         </p:selectOneMenu>
 
         <p:outputLabel value="Date period" />               
-        <p:selectOneMenu value= "#{clientManager.dateSearchPeriod.name}" 
+        <p:selectOneMenu value= "#{legalDocumentManager.dateSearchPeriod.name}" 
                          id="datePeriod" >
 
-            <p:ajax listener="#{clientManager.dateSearchPeriod.initDatePeriod}"
+            <p:ajax listener="#{legalDocumentManager.dateSearchPeriod.initDatePeriod}"
                     global="false"
                     update="startSearchDate,endSearchDate"
                     process="@this" />
 
-            <f:selectItems value="#{clientManager.datePeriods}"/>
+            <f:selectItems value="#{legalDocumentManager.datePeriods}"/>
 
         </p:selectOneMenu>
         <p:outputLabel value="Start" />
         <p:calendar id="startSearchDate"
-                    value="#{clientManager.dateSearchPeriod.startDate}"                    
+                    value="#{legalDocumentManager.dateSearchPeriod.startDate}"                    
                     size="17"
                     navigator="true"
                     validator="requiredFieldValidator"
-                    disabled="#{clientManager.dateSearchPeriod.startDateDisabled}"
+                    disabled="#{legalDocumentManager.dateSearchPeriod.startDateDisabled}"
                     pattern="MMM dd, yyyy" />
 
         <p:outputLabel value="End" />
         <p:calendar id="endSearchDate"
-                    value="#{clientManager.dateSearchPeriod.endDate}"
+                    value="#{legalDocumentManager.dateSearchPeriod.endDate}"
                     size="17"
                     navigator="true"
                     validator="requiredFieldValidator"
-                    disabled="#{clientManager.dateSearchPeriod.endDateDisabled}"
+                    disabled="#{legalDocumentManager.dateSearchPeriod.endDateDisabled}"
                     pattern="MMM dd, yyyy" />
 
     </h:panelGrid>   
 
-    <p:inputText value="#{clientManager.searchText}"  
+    <p:inputText value="#{legalDocumentManager.searchText}"  
                  id="searchText" >
 
         <p:ajax event="keyup"
                 global="false"
-                listener="#{clientManager.updateSearch}"
+                listener="#{legalDocumentManager.updateSearch}"
                 process="@this"/>
 
         <p:ajax event="mousemove"
                 global="false"
-                listener="#{clientManager.updateSearch}"
+                listener="#{legalDocumentManager.updateSearch}"
                 process="@this"/>
 
     </p:inputText>                    
@@ -99,7 +99,7 @@ Email: info@dpbennett.com.jm
     <p:spacer width="5" />
     <p:commandButton id="defaultCommand"
                      class="search-button"   
-                     actionListener="#{clientManager.doDefaultCommand}"
+                     actionListener="#{legalDocumentManager.doDefaultCommand}"
                      update=":appForm:mainTabView"
                      icon="pi pi-search"
                      process="@form" />
