--- a/src/main/webapp/legal/legalDocumentDialog.xhtml
+++ b/src/main/webapp/legal/legalDocumentDialog.xhtml
@@ -186,7 +186,7 @@ Email: info@dpbennett.com.jm
                                             scrollHeight="200" 
                                             size="35"  
                                             maxlength="40"
-                                            value="#{legalDocumentManager.currentDocument.type}"
+                                            value="#{legalDocumentManager.currentDocument.documentType}"
                                             itemValue="#{documentType}"
                                             itemLabel="#{documentType.name}"
                                             converter="documentTypeConverter"
