--- a/src/main/webapp/legal/legalDocumentDeleteConfirmDialog.xhtml
+++ b/src/main/webapp/legal/legalDocumentDeleteConfirmDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 Legal Office (LO) 
-Copyright (C) 2022  D P Bennett & Associates Limited
+Copyright (C) 2023  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -22,18 +22,15 @@ Email: info@dpbennett.com.jm
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"> 
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="cache-control" content="max-age=0" />
-        <meta http-equiv="cache-control" content="no-cache" />
-        <meta http-equiv="expires" content="0" />
-        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-        <meta http-equiv="pragma" content="no-cache" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />       
         <title>Delete Document Record</title>
-        <link rel="stylesheet" href="../../css/main.css" /> 
+        <script type="text/javascript" src="../js/javascripts.js" /> 
+        <h:outputStylesheet library="webjars" name="primeflex/3.2.1/primeflex.min.css" />       
+        <link rel="stylesheet" type="text/css" href="../css/main.css" />  
     </h:head>
     <h:body>
         <h:form id="legalDocumentDeleteConfirmDialogForm">           
-            <p:growl id="growl" life="5000" showDetail="true" />
+            <p:growl id="growl" life="5000" showDetail="false" />
             <p:panel style="border: 0">
                 <h:panelGrid cellpadding="5">
                     <h:panelGroup>
