--- a/src/main/webapp/legal/legalDocumentDialog.xhtml
+++ b/src/main/webapp/legal/legalDocumentDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 Legal Office (LO) 
-Copyright (C) 2022  D P Bennett & Associates Limited
+Copyright (C) 2024  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -25,20 +25,18 @@ Email: info@dpbennett.com.jm
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="cache-control" content="max-age=0" />
-        <meta http-equiv="cache-control" content="no-cache" />
-        <meta http-equiv="expires" content="0" />
-        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-        <meta http-equiv="pragma" content="no-cache" />
+        <ui:include src="../head.xhtml" />        
         <title>Legal Document</title>
-        <link rel="stylesheet" href="../css/main.css" />
+        <script type="text/javascript" src="../js/javascripts.js" /> 
+        <h:outputStylesheet library="webjars" name="primeflex/3.2.1/primeflex.min.css" />       
+        <link rel="stylesheet" type="text/css" href="../css/main.css" />  
     </h:head>
+
     <h:body >  
         <ui:include src="../common/commonDialogs.xhtml"/>  
 
         <h:form id="documentDialogForm">        
-            <p:growl id="document_dialog_growl" life="5000" showDetail="true" />
+            <p:growl id="document_dialog_growl" life="5000" showDetail="false" />
 
             <ui:include src="legalDocumentDialogToolbar.xhtml" />
 
@@ -88,15 +86,16 @@ Email: info@dpbennett.com.jm
                         <p:autoComplete var="department"
                                         forceSelection="true"      
                                         dropdown="true"
-                                        scrollHeight="200" 
-                                        size="35"  
-                                        maxlength="40"
+                                        scrollHeight="200"                                       
                                         value="#{legalDocumentManager.currentDocument.requestingDepartment}"
                                         itemValue="#{department}"
                                         itemLabel="#{department.name}"
-                                        converter="activeDepartmentConverter"
                                         validator="businessEntityValidator"
                                         completeMethod="#{humanResourceManager.completeActiveDepartment}" >            
+
+                            <f:converter converterId="activeDepartmentConverter"/>
+
+                            <f:attribute name="em" value="#{humanResourceManager.entityManager1}"/>
 
                             <p:ajax listener="#{legalDocumentManager.updateDocument}"
                                     event="itemSelect"
@@ -110,15 +109,16 @@ Email: info@dpbennett.com.jm
                                             widgetVar="clientVar"
                                             value="#{legalDocumentManager.currentDocument.externalClient}"
                                             var="client"
-                                            size="35"
-                                            maxlength="40" 
                                             scrollHeight="200" 
                                             itemLabel="#{client.truncatedName}"
                                             itemValue="#{client}"
                                             title="#{client.name}"
                                             forceSelection="true"
-                                            converter="activeClientConverter"
                                             completeMethod="#{clientManager.completeActiveClient}" >
+
+                                <f:converter converterId="activeClientConverter"/>
+
+                                <f:attribute name="em" value="#{clientManager.entityManager1}"/>
 
                                 <p:ajax event="itemSelect"   
                                         update="clientActionsMenu"
@@ -159,21 +159,24 @@ Email: info@dpbennett.com.jm
 
                         <h:outputText value="Requesting employee" style="font-weight: bold;" />
                         <p:autoComplete id="submittedBy"  
-                                        maxlength="40"
                                         scrollHeight="200" 
-                                        size="35"
                                         var="submittedBy"
                                         value="#{legalDocumentManager.currentDocument.submittedBy}"
                                         itemLabel="#{submittedBy.name}"
                                         itemValue="#{submittedBy}"
-                                        converter="activeEmployeeConverter"
                                         validator="businessEntityValidator"
                                         forceSelection="true"         
                                         dropdown="true"
                                         completeMethod="#{humanResourceManager.completeActiveEmployee}" >
+
+                            <f:converter converterId="activeEmployeeConverter"/>
+
+                            <f:attribute name="em" value="#{humanResourceManager.entityManager1}"/>
+
                             <p:ajax event="itemSelect"
                                     listener="#{legalDocumentManager.updateDocument}"
                                     process="@this"/>
+
                         </p:autoComplete>
 
 
@@ -184,14 +187,15 @@ Email: info@dpbennett.com.jm
                                             forceSelection="true"      
                                             dropdown="true"
                                             scrollHeight="200" 
-                                            size="35"  
-                                            maxlength="40"
                                             value="#{legalDocumentManager.currentDocument.documentType}"
                                             itemValue="#{documentType}"
                                             itemLabel="#{documentType.name}"
-                                            converter="documentTypeConverter"
                                             validator="businessEntityValidator"
-                                            completeMethod="#{legalDocumentManager.completeLegalDocumentType}" >            
+                                            completeMethod="#{systemManager.completeDocumentType}" >            
+
+                                <f:converter converterId="documentTypeConverter"/>
+
+                                <f:attribute name="em" value="#{systemManager.entityManager1}"/>
 
                                 <p:ajax listener="#{legalDocumentManager.updateDocument}"
                                         event="itemSelect"
@@ -199,8 +203,12 @@ Email: info@dpbennett.com.jm
                                         process="@this" />
 
                             </p:autoComplete>
-                            <p:spacer height="0" width="4"/>                           
-                            <p:menuButton icon="pi pi-pencil" title="Edit or add new type">
+                            <p:spacer height="0" 
+                                      rendered="false"
+                                      width="4"/>                           
+                            <p:menuButton icon="pi pi-pencil" 
+                                          rendered="false"
+                                          title="Edit or add new type">
                                 <p:menuitem value="Edit"
                                             icon="pi pi-pencil" 
                                             actionListener="#{legalDocumentManager.editDocumentType}" 
@@ -236,23 +244,28 @@ Email: info@dpbennett.com.jm
                                             var="classification"
                                             id="classification"
                                             styleClass="#{not component.valid ? 'ui-invalid-inputfield' : ''}" 
-                                            size="35"
-                                            maxlength="40"
                                             value="#{legalDocumentManager.currentDocument.classification}"
                                             itemLabel="#{classification.name}"                        
-                                            itemValue="#{classification}"                        
-                                            converter="classificationConverter"
+                                            itemValue="#{classification}"  
                                             validator="businessEntityValidator"
                                             forceSelection="true"
-                                            completeMethod="#{legalDocumentManager.completeClassification}" >
+                                            scrollHeight="200"
+                                            completeMethod="#{financeManager.completeClassification}" >
+
+                                <f:converter converterId="classificationConverter"/>
+
+                                <f:attribute name="em" value="#{financeManager.entityManager1}"/>
 
                                 <p:ajax event="itemSelect"                                                                  
                                         listener="#{legalDocumentManager.updateDocument}"
                                         process="@this"/>
 
                             </p:autoComplete>
-                            <p:spacer height="0" width="4"/>                           
-                            <p:menuButton icon="pi pi-pencil" 
+                            <p:spacer height="0" 
+                                      rendered="false"
+                                      width="4"/>                           
+                            <p:menuButton icon="pi pi-pencil"
+                                          rendered="false"
                                           title="Edit or add new classification">
                                 <p:menuitem value="Edit"
                                             icon="pi pi-pencil" 
@@ -310,11 +323,10 @@ Email: info@dpbennett.com.jm
                         <p:inputTextarea value="#{legalDocumentManager.currentDocument.description}"
                                          id="documentDescription"
                                          rows="3"
-                                         autoResize="false"
-                                         style="width: 300px">
+                                         autoResize="false" >
 
                             <f:validator validatorId="requiredFieldValidator" />
-                            
+
                             <p:ajax event="change"
                                     listener="#{legalDocumentManager.updateDocument}"
                                     process="@this"/>
@@ -325,8 +337,7 @@ Email: info@dpbennett.com.jm
                         <p:inputTextarea value="#{legalDocumentManager.currentDocument.workPerformedOnDocument}"
                                          id="workPerformedOnDocument"
                                          rows="2"
-                                         autoResize="false"
-                                         style="width: 300px">
+                                         autoResize="false" >
 
                             <p:ajax event="change"
                                     listener="#{legalDocumentManager.updateDocument}"
@@ -361,14 +372,15 @@ Email: info@dpbennett.com.jm
                                         forceSelection="true"      
                                         dropdown="true"
                                         scrollHeight="200" 
-                                        size="35"  
-                                        maxlength="40"
                                         value="#{legalDocumentManager.currentDocument.responsibleDepartment}"
                                         itemValue="#{department}"
                                         itemLabel="#{department.name}"
-                                        converter="activeDepartmentConverter"
                                         validator="businessEntityValidator"
                                         completeMethod="#{humanResourceManager.completeActiveDepartment}" >            
+
+                            <f:converter converterId="activeDepartmentConverter"/>
+
+                            <f:attribute name="em" value="#{humanResourceManager.entityManager1}"/>
 
                             <p:ajax listener="#{legalDocumentManager.updateDocument}"
                                     event="itemSelect"
@@ -378,19 +390,20 @@ Email: info@dpbennett.com.jm
 
                         <h:outputText value="Officer responsible" style="font-weight: bold;" />
                         <p:autoComplete id="officerResponsible"   
-                                        maxlength="40"
                                         scrollHeight="200" 
-                                        size="35"
                                         var="officerResponsible"
                                         dropdown="true"
                                         value="#{legalDocumentManager.currentDocument.responsibleOfficer}"
                                         itemLabel="#{officerResponsible.name}"
                                         itemValue="#{officerResponsible}"
-                                        converter="activeEmployeeConverter"
                                         validator="businessEntityValidator"
                                         forceSelection="true"
                                         completeMethod="#{humanResourceManager.completeActiveEmployee}" >
 
+                            <f:converter converterId="activeEmployeeConverter"/>
+
+                            <f:attribute name="em" value="#{humanResourceManager.entityManager1}"/>
+                            
                             <p:ajax event="itemSelect"
                                     listener="#{legalDocumentManager.updateDocument}"
                                     process="@this"/>
@@ -462,8 +475,7 @@ Email: info@dpbennett.com.jm
                         </p:selectOneMenu>
 
                         <h:outputText value="Comment" />
-                        <p:inputTextarea value="#{legalDocumentManager.currentDocument.comments}"
-                                         style="width: 300px">
+                        <p:inputTextarea value="#{legalDocumentManager.currentDocument.comments}" >
 
                             <p:ajax event="change"
                                     listener="#{legalDocumentManager.updateDocument}"
