--- a/src/main/webapp/legal/typeGroupDialogToolbar.xhtml
+++ b/src/main/webapp/legal/typeGroupDialogToolbar.xhtml
@@ -1,6 +1,6 @@
 <!--
 Legal Office (LO) 
-Copyright (C) 2022  D P Bennett & Associates Limited
+Copyright (C) 2023  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -24,7 +24,7 @@ Email: info@dpbennett.com.jm
 
     <p:toolbar>
         <p:toolbarGroup align="left">
-            <p:commandButton onclick="typeGroupDialog.hide();"
+            <p:commandButton onclick="PF('typeGroupDialog').hide();"
                              value="Close"
                              icon="pi pi-times"/>
             <p:spacer width="10" />
