--- a/src/main/webapp/loginDialog.xhtml
+++ b/src/main/webapp/loginDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 Legal Office (LO) 
-Copyright (C) 2023  D P Bennett & Associates Limited
+Copyright (C) 2024  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -30,7 +30,7 @@ Email: info@dpbennett.com.jm
               modal="true"
               visible="#{!legalDocumentManager.userLoggedIn}"              
               widgetVar="loginDialog"
-              width="375"
+              width="auto"
               closable="false"
               resizable="false">
 
@@ -39,25 +39,26 @@ Email: info@dpbennett.com.jm
             <p:outputLabel id="loginMessage" 
                            value="#{legalDocumentManager.logonMessage}" style="font-weight: bold" />
             <h:panelGrid columns="2" cellspacing="10">
-                <p:outputLabel for="username" value="Username" style="font-weight: bold" />
+                <p:outputLabel value="Username" style="font-weight: bold" />
                 <p:inputText value="#{legalDocumentManager.username}"
                              id="username" 
                              required="true"
                              validatorMessage="Please enter a valid username" />
 
-                <p:outputLabel for="password" value="Password" style="font-weight: bold" />
+                <p:outputLabel value="Password" style="font-weight: bold" />
                 <p:password id="password"
                             value="#{legalDocumentManager.password}"
                             maxlength="255" 
                             redisplay="true"
                             toggleMask="true"
+                            required="true"
                             label="password"
                             feedback="false" />               
 
                 <f:facet name="footer">
                     <p:commandButton value="Login"
                                      icon="pi pi-sign-in"    
-                                     update="loginForm"                                                                                                            
+                                     update="loginForm,:appForm"                                                                                                            
                                      global="true"
                                      oncomplete="window.location.reload();"
                                      process="@form"
