--- a/src/main/webapp/legal/documentSearchToolbar.xhtml
+++ b/src/main/webapp/legal/documentSearchToolbar.xhtml
@@ -1,6 +1,6 @@
 <!--
 Legal Office (LO) 
-Copyright (C) 2024  D P Bennett & Associates Limited
+Copyright (C) 2025  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -35,7 +35,7 @@ Email: info@dpbennett.com.jm
                     <p:commandButton id="legalDocumentSearchButton"
                                      class="search-button"   
                                      actionListener="#{legalDocumentManager.doLegalDocumentSearch}"
-                                     update=":appForm:mainTabView:documentTable"
+                                     update=":mainTabViewForm:mainTabView:documentTable"
                                      icon="pi pi-search"
                                      process="@form" />
                 </h:panelGroup>
